fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,11 @@ body{
     margin: auto;
     color: #ffffff;
     background-color: rgb(15, 16, 16);
-    font-size: 30px;
+    font-size: 20px;
     border-radius: 10px;
-    width: 100%;
+    width: 40%;
     opacity: 0.9;
+    padding: 5px;
 }
     
 h3{
